cleanup bookmark code, datasource deselect

--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "عام",
   "app-section-library-manuscripts": "المخطوطات",
   "app-section-library-history": "تاريخ",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "فلسفة",
   "app-section-library-genealogy": "علم الأنساب",
   "app-section-library-legal": "قانوني",
