--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -164,6 +164,7 @@
   "app-section-library-general": "সাধারণ",
   "app-section-library-manuscripts": "পাণ্ডুলিপি",
   "app-section-library-history": "ইতিহাস",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "দর্শন",
   "app-section-library-genealogy": "বংশতালিকা",
   "app-section-library-legal": "গ্রুপ",
