--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "heneral",
   "app-section-library-manuscripts": "mga manuskrito",
   "app-section-library-history": "kasaysayan",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "pilosopiya",
   "app-section-library-genealogy": "genealogy",
   "app-section-library-legal": "legal",
