--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "Všeobecné",
   "app-section-library-manuscripts": "rukopisy",
   "app-section-library-history": "Dějiny",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "filozofie",
   "app-section-library-genealogy": "genealogie",
   "app-section-library-legal": "právní",
