--- a/app/explore2/assets/i18n/ui/conzept-da.json
+++ b/app/explore2/assets/i18n/ui/conzept-da.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "generel",
   "app-section-library-manuscripts": "manuskripter",
   "app-section-library-history": "historie",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "filosofi",
   "app-section-library-genealogy": "genealogi",
   "app-section-library-legal": "gyldige",
