--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "allgemein",
   "app-section-library-manuscripts": "Manuskripte",
   "app-section-library-history": "Geschichte",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "Philosophie",
   "app-section-library-genealogy": "Genealogie",
   "app-section-library-legal": "legal",
