--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "general",
   "app-section-library-manuscripts": "manuscritos",
   "app-section-library-history": "historia",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "filosofía",
   "app-section-library-genealogy": "genealogía",
   "app-section-library-legal": "legal",
