--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "عمومی",
   "app-section-library-manuscripts": "نسخه های خطی",
   "app-section-library-history": "تاریخ",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "فلسفه",
   "app-section-library-genealogy": "شجره نامه",
   "app-section-library-legal": "مجاز",
