--- a/app/explore2/assets/i18n/ui/conzept-fi.json
+++ b/app/explore2/assets/i18n/ui/conzept-fi.json
@@ -165,6 +165,7 @@
   "app-section-library-general": "yleistä",
   "app-section-library-manuscripts": "käsikirjoituksia",
   "app-section-library-history": "historia",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "filosofia",
   "app-section-library-genealogy": "sukututkimusta",
   "app-section-library-legal": "laillinen",
