--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -165,6 +165,7 @@
   "app-section-library-general": "général",
   "app-section-library-manuscripts": "manuscrits",
   "app-section-library-history": "histoire",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "philosophie",
   "app-section-library-genealogy": "généalogie",
   "app-section-library-legal": "légal",
