--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "na gaba ɗaya",
   "app-section-library-manuscripts": "rubuce-rubucen hannu",
   "app-section-library-history": "tarihi",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "falsafa",
   "app-section-library-genealogy": "zuriyarsu",
   "app-section-library-legal": "na shari'a",
