--- a/app/explore2/assets/i18n/ui/conzept-hi.json
+++ b/app/explore2/assets/i18n/ui/conzept-hi.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "सामान्य",
   "app-section-library-manuscripts": "पांडुलिपियों",
   "app-section-library-history": "इतिहास",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "दर्शन",
   "app-section-library-genealogy": "वंशावली",
   "app-section-library-legal": "कानूनी",
