--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "Općenito",
   "app-section-library-manuscripts": "rukopisi",
   "app-section-library-history": "povijesti",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "filozofija",
   "app-section-library-genealogy": "genealogija",
   "app-section-library-legal": "pravni",
