--- a/app/explore2/assets/i18n/ui/conzept-id.json
+++ b/app/explore2/assets/i18n/ui/conzept-id.json
@@ -165,6 +165,7 @@
   "app-section-library-general": "umum",
   "app-section-library-manuscripts": "manuskrip",
   "app-section-library-history": "sejarah",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "filsafat",
   "app-section-library-genealogy": "silsilah",
   "app-section-library-legal": "hukum",
