--- a/app/explore2/assets/i18n/ui/conzept-it.json
+++ b/app/explore2/assets/i18n/ui/conzept-it.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "generale",
   "app-section-library-manuscripts": "manoscritti",
   "app-section-library-history": "storia",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "filosofia",
   "app-section-library-genealogy": "genealogia",
   "app-section-library-legal": "legale",
