--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "一般的な",
   "app-section-library-manuscripts": "原稿",
   "app-section-library-history": "歴史",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "哲学",
   "app-section-library-genealogy": "系譜",
   "app-section-library-legal": "法律上の",
