--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "일반적인",
   "app-section-library-manuscripts": "원고",
   "app-section-library-history": "역사",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "철학",
   "app-section-library-genealogy": "가계",
   "app-section-library-legal": "합법적인",
