--- a/app/explore2/assets/i18n/ui/conzept-mr.json
+++ b/app/explore2/assets/i18n/ui/conzept-mr.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "सामान्य",
   "app-section-library-manuscripts": "हस्तलिखिते",
   "app-section-library-history": "इतिहास",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "तत्वज्ञान",
   "app-section-library-genealogy": "वंशावळी",
   "app-section-library-legal": "कायदेशीर",
