--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "algemeen",
   "app-section-library-manuscripts": "manuscripten",
   "app-section-library-history": "geschiedenis",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "filosofie",
   "app-section-library-genealogy": "genealogie",
   "app-section-library-legal": "legaal",
