--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "em geral",
   "app-section-library-manuscripts": "manuscritos",
   "app-section-library-history": "história",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "filosofia",
   "app-section-library-genealogy": "Genealogia",
   "app-section-library-legal": "jurídico",
