--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "общий",
   "app-section-library-manuscripts": "рукописи",
   "app-section-library-history": "история",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "философия",
   "app-section-library-genealogy": "генеалогия",
   "app-section-library-legal": "юридический",
