--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "Генерал",
   "app-section-library-manuscripts": "рукописима",
   "app-section-library-history": "историје",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "филозофија",
   "app-section-library-genealogy": "генеалогија",
   "app-section-library-legal": "правни",
