--- a/app/explore2/assets/i18n/ui/conzept-sv.json
+++ b/app/explore2/assets/i18n/ui/conzept-sv.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "allmän",
   "app-section-library-manuscripts": "manuskript",
   "app-section-library-history": "historia",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "filosofi",
   "app-section-library-genealogy": "genealogi",
   "app-section-library-legal": "Rättslig",
