--- a/app/explore2/assets/i18n/ui/conzept-sw.json
+++ b/app/explore2/assets/i18n/ui/conzept-sw.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "jumla",
   "app-section-library-manuscripts": "maandishi",
   "app-section-library-history": "historia",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "falsafa",
   "app-section-library-genealogy": "nasaba",
   "app-section-library-legal": "kisheria",
