--- a/app/explore2/assets/i18n/ui/conzept-ta.json
+++ b/app/explore2/assets/i18n/ui/conzept-ta.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "பொது",
   "app-section-library-manuscripts": "கையெழுத்துப் பிரதிகள்",
   "app-section-library-history": "வரலாறு",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "தத்துவம்",
   "app-section-library-genealogy": "பரம்பரை",
   "app-section-library-legal": "சட்டபூர்வமான",
