--- a/app/explore2/assets/i18n/ui/conzept-te.json
+++ b/app/explore2/assets/i18n/ui/conzept-te.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "సాధారణ",
   "app-section-library-manuscripts": "రాతప్రతులు",
   "app-section-library-history": "చరిత్ర",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "తత్వశాస్త్రం",
   "app-section-library-genealogy": "వంశావళి",
   "app-section-library-legal": "చట్టపరమైన",
