--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "genel",
   "app-section-library-manuscripts": "el yazmaları",
   "app-section-library-history": "tarih",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "Felsefe",
   "app-section-library-genealogy": "şecere",
   "app-section-library-legal": "yasal",
