--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "загальний",
   "app-section-library-manuscripts": "рукописи",
   "app-section-library-history": "історії",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "філософія",
   "app-section-library-genealogy": "генеалогія",
   "app-section-library-legal": "правовий",
