--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "جنرل",
   "app-section-library-manuscripts": "مخطوطات",
   "app-section-library-history": "تاریخ",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "فلسفہ",
   "app-section-library-genealogy": "نسب نامہ",
   "app-section-library-legal": "قانونی",
