--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "tổng quan",
   "app-section-library-manuscripts": "bản thảo",
   "app-section-library-history": "lịch sử",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "triết lý",
   "app-section-library-genealogy": "phả hệ",
   "app-section-library-legal": "hợp pháp",
