--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "一般的",
   "app-section-library-manuscripts": "手稿",
   "app-section-library-history": "历史",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "哲学",
   "app-section-library-genealogy": "家谱",
   "app-section-library-legal": "合法的",
