--- a/app/explore2/assets/i18n/ui/conzept-ca.json
+++ b/app/explore2/assets/i18n/ui/conzept-ca.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "general",
   "app-section-library-manuscripts": "manuscrits",
   "app-section-library-history": "història",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "filosofia",
   "app-section-library-genealogy": "genealogia",
   "app-section-library-legal": "legal",
