--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -180,6 +180,7 @@
   "app-section-science-mathematics": "mathematics",
   "app-section-science-astronomy": "astronomy",
   "app-section-science-physics": "physics",
+  "app-section-science-psychology": "psychology",
   "app-section-science-computing": "computing",
   "app-section-media-datasets": "datasets",
   "app-section-media-datasets-general": "general",
@@ -203,7 +204,6 @@
   "app-section-society": "society",
   "app-section-society-sports": "sports",
   "app-section-society-food": "food",
-  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poetry",
   "app-section-library-identity": "identity",
