--- a/app/explore2/assets/i18n/ui/conzept-no.json
+++ b/app/explore2/assets/i18n/ui/conzept-no.json
@@ -173,6 +173,7 @@
   "app-section-library-general": "generell",
   "app-section-library-manuscripts": "manuskripter",
   "app-section-library-history": "historie",
+  "app-section-science-psychology": "psychology",
   "app-section-library-philosophy": "filosofi",
   "app-section-library-genealogy": "slektsforskning",
   "app-section-library-legal": "lovlig",
