--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -174,6 +174,13 @@
   "app-section-library-manuscripts": "المخطوطات",
   "app-section-library-history": "تاريخ",
   "app-section-science-psychology": "psychology",
+  "app-menu-batch-size": "batch size",
+  "app-menu-bookmark-actions-sidebar": "sidebar",
+  "app-menu-bookmark-actions-chat": "chat",
+  "app-guide-conzept-sidebar-educate": "educational topics",
+  "app-guide-bookmark-related-websites": "related websites",
+  "app-guide-bookmark-books": "books",
+  "app-guide-bookmark-history": "history",
   "app-section-library-philosophy": "فلسفة",
   "app-section-library-genealogy": "علم الأنساب",
   "app-section-library-legal": "قانوني",
