--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -125,8 +125,8 @@
   "app-menu-new-search": "neue Suche",
   "app-menu-structured-search": "Strukturierte Suche",
   "app-menu-geospatial-search": "Geodatensuche",
-  "app-section-main": "hauptsächlich",
-  "app-section-info": "die Info",
+  "app-section-main": "Hauptsächlich",
+  "app-section-info": "Info",
   "app-section-library": "Bibliothek",
   "app-section-web": "Netz",
   "app-section-news": "Nachricht",
@@ -138,7 +138,7 @@
   "app-section-location-geography": "Erdkunde",
   "app-section-location-demography": "Demographie",
   "app-section-location-ecology": "Ökologie",
-  "app-section-location-travel": "reisen",
+  "app-section-location-travel": "Reisen",
   "app-section-location-weather": "Wetter",
   "app-section-location-real-estate": "Immobilie",
   "app-section-business": "Geschäft",
@@ -153,7 +153,7 @@
   "app-section-education-quizzes": "Quizze",
   "app-section-science": "Wissenschaft",
   "app-section-science-search-tools": "Suchwerkzeuge",
-  "app-section-science-open-journals": "Tagebücher öffnen",
+  "app-section-science-open-journals": "öffnen Zeitschriften",
   "app-section-science-closed-journals": "geschlossene Zeitschriften",
   "app-section-science-news": "Nachricht",
   "app-section-science-language": "Sprache",
@@ -174,6 +174,13 @@
   "app-section-library-manuscripts": "Manuskripte",
   "app-section-library-history": "Geschichte",
   "app-section-science-psychology": "psychology",
+  "app-menu-batch-size": "chargengröße",
+  "app-menu-bookmark-actions-sidebar": "Seitenleiste",
+  "app-menu-bookmark-actions-chat": "Chatten",
+  "app-guide-conzept-sidebar-educate": "pädagogische Themen",
+  "app-guide-bookmark-related-websites": "verwandte Websites",
+  "app-guide-bookmark-books": "Bücher",
+  "app-guide-bookmark-history": "Geschichte",
   "app-section-library-philosophy": "Philosophie",
   "app-section-library-genealogy": "Genealogie",
   "app-section-library-legal": "legal",
@@ -189,7 +196,7 @@
   "app-section-society-food": "Essen",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "datumsbereich",
-  "app-menu-graphmode": "graphmode",
+  "app-menu-graphmode": "Grafikmodus",
   "app-menu-search-in-option-web": "web",
   "app-menu-search-in-option-news": "news",
   "app-guide-bookmark-conceptology": "conceptology",
