--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -174,6 +174,13 @@
   "app-section-library-manuscripts": "rukopisi",
   "app-section-library-history": "povijesti",
   "app-section-science-psychology": "psychology",
+  "app-menu-batch-size": "batch size",
+  "app-menu-bookmark-actions-sidebar": "sidebar",
+  "app-menu-bookmark-actions-chat": "chat",
+  "app-guide-conzept-sidebar-educate": "educational topics",
+  "app-guide-bookmark-related-websites": "related websites",
+  "app-guide-bookmark-books": "books",
+  "app-guide-bookmark-history": "history",
   "app-section-library-philosophy": "filozofija",
   "app-section-library-genealogy": "genealogija",
   "app-section-library-legal": "pravni",
