--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -174,6 +174,13 @@
   "app-section-library-manuscripts": "원고",
   "app-section-library-history": "역사",
   "app-section-science-psychology": "psychology",
+  "app-menu-batch-size": "batch size",
+  "app-menu-bookmark-actions-sidebar": "sidebar",
+  "app-menu-bookmark-actions-chat": "chat",
+  "app-guide-conzept-sidebar-educate": "educational topics",
+  "app-guide-bookmark-related-websites": "related websites",
+  "app-guide-bookmark-books": "books",
+  "app-guide-bookmark-history": "history",
   "app-section-library-philosophy": "철학",
   "app-section-library-genealogy": "가계",
   "app-section-library-legal": "합법적인",
