--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -174,6 +174,13 @@
   "app-section-library-manuscripts": "manuscripten",
   "app-section-library-history": "geschiedenis",
   "app-section-science-psychology": "psychology",
+  "app-menu-batch-size": "batchgrootte",
+  "app-menu-bookmark-actions-sidebar": "zijbalk",
+  "app-menu-bookmark-actions-chat": "chatten",
+  "app-guide-conzept-sidebar-educate": "educational topics",
+  "app-guide-bookmark-related-websites": "related websites",
+  "app-guide-bookmark-books": "books",
+  "app-guide-bookmark-history": "history",
   "app-section-library-philosophy": "filosofie",
   "app-section-library-genealogy": "genealogie",
   "app-section-library-legal": "legaal",
