--- a/app/explore2/assets/i18n/ui/conzept-ta.json
+++ b/app/explore2/assets/i18n/ui/conzept-ta.json
@@ -174,6 +174,13 @@
   "app-section-library-manuscripts": "கையெழுத்துப் பிரதிகள்",
   "app-section-library-history": "வரலாறு",
   "app-section-science-psychology": "psychology",
+  "app-menu-batch-size": "batch size",
+  "app-menu-bookmark-actions-sidebar": "sidebar",
+  "app-menu-bookmark-actions-chat": "chat",
+  "app-guide-conzept-sidebar-educate": "educational topics",
+  "app-guide-bookmark-related-websites": "related websites",
+  "app-guide-bookmark-books": "books",
+  "app-guide-bookmark-history": "history",
   "app-section-library-philosophy": "தத்துவம்",
   "app-section-library-genealogy": "பரம்பரை",
   "app-section-library-legal": "சட்டபூர்வமான",
