--- a/app/explore2/assets/i18n/ui/conzept-te.json
+++ b/app/explore2/assets/i18n/ui/conzept-te.json
@@ -174,6 +174,13 @@
   "app-section-library-manuscripts": "రాతప్రతులు",
   "app-section-library-history": "చరిత్ర",
   "app-section-science-psychology": "psychology",
+  "app-menu-batch-size": "batch size",
+  "app-menu-bookmark-actions-sidebar": "sidebar",
+  "app-menu-bookmark-actions-chat": "chat",
+  "app-guide-conzept-sidebar-educate": "educational topics",
+  "app-guide-bookmark-related-websites": "related websites",
+  "app-guide-bookmark-books": "books",
+  "app-guide-bookmark-history": "history",
   "app-section-library-philosophy": "తత్వశాస్త్రం",
   "app-section-library-genealogy": "వంశావళి",
   "app-section-library-legal": "చట్టపరమైన",
