--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -174,6 +174,13 @@
   "app-section-library-manuscripts": "bản thảo",
   "app-section-library-history": "lịch sử",
   "app-section-science-psychology": "psychology",
+  "app-menu-batch-size": "batch size",
+  "app-menu-bookmark-actions-sidebar": "sidebar",
+  "app-menu-bookmark-actions-chat": "chat",
+  "app-guide-conzept-sidebar-educate": "educational topics",
+  "app-guide-bookmark-related-websites": "related websites",
+  "app-guide-bookmark-books": "books",
+  "app-guide-bookmark-history": "history",
   "app-section-library-philosophy": "triết lý",
   "app-section-library-genealogy": "phả hệ",
   "app-section-library-legal": "hợp pháp",
