structured search result count fix

--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -197,11 +197,11 @@
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "datumsbereich",
   "app-menu-graphmode": "Grafikmodus",
-  "app-menu-search-in-option-web": "web",
-  "app-menu-search-in-option-news": "news",
+  "app-menu-search-in-option-web": "Web",
+  "app-menu-search-in-option-news": "Nachricht",
+  "app-menu-search-in-option-media": "Medien",
+  "app-menu-search-in-option-legal": "Recht",
   "app-guide-bookmark-conceptology": "conceptology",
-  "app-menu-search-in-option-media": "media",
-  "app-menu-search-in-option-legal": "legal",
   "app-menu-near": "nahe",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "Poesie",
