rename to nearby-search

--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -181,6 +181,7 @@
   "app-guide-bookmark-related-websites": "verwandte Websites",
   "app-guide-bookmark-books": "Bücher",
   "app-guide-bookmark-history": "Geschichte",
+  "app-menu-nearby-search": "Suche in der Nähe",
   "app-section-library-philosophy": "Philosophie",
   "app-section-library-genealogy": "Genealogie",
   "app-section-library-legal": "legal",
