--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -181,6 +181,7 @@
   "app-guide-bookmark-related-websites": "related websites",
   "app-guide-bookmark-books": "books",
   "app-guide-bookmark-history": "history",
+  "app-menu-nearby-search": "nearby search",
   "app-section-library-philosophy": "哲学",
   "app-section-library-genealogy": "家谱",
   "app-section-library-legal": "合法的",
