--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -181,6 +181,7 @@
   "app-guide-bookmark-related-websites": "related websites",
   "app-guide-bookmark-books": "books",
   "app-guide-bookmark-history": "history",
+  "app-menu-nearby-search": "nearby search",
   "app-section-library-philosophy": "فلسفة",
   "app-section-library-genealogy": "علم الأنساب",
   "app-section-library-legal": "قانوني",
