--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -172,6 +172,7 @@
   "app-guide-bookmark-related-websites": "related websites",
   "app-guide-bookmark-books": "books",
   "app-guide-bookmark-history": "history",
+  "app-menu-nearby-search": "nearby search",
   "app-section-library-philosophy": "দর্শন",
   "app-section-library-genealogy": "বংশতালিকা",
   "app-section-library-legal": "গ্রুপ",
