--- a/app/explore2/assets/i18n/ui/conzept-te.json
+++ b/app/explore2/assets/i18n/ui/conzept-te.json
@@ -181,6 +181,7 @@
   "app-guide-bookmark-related-websites": "related websites",
   "app-guide-bookmark-books": "books",
   "app-guide-bookmark-history": "history",
+  "app-menu-nearby-search": "nearby search",
   "app-section-library-philosophy": "తత్వశాస్త్రం",
   "app-section-library-genealogy": "వంశావళి",
   "app-section-library-legal": "చట్టపరమైన",
