--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -182,6 +182,7 @@
   "app-guide-bookmark-books": "Bücher",
   "app-guide-bookmark-history": "Geschichte",
   "app-menu-nearby-search": "Suche in der Nähe",
+  "app-section-science-sociology": "sociology",
   "app-section-library-philosophy": "Philosophie",
   "app-section-library-genealogy": "Genealogie",
   "app-section-library-legal": "legal",
