--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -186,6 +186,7 @@
   "app-section-science-astronomy": "astronomy",
   "app-section-science-physics": "physics",
   "app-section-science-psychology": "psychology",
+  "app-section-science-sociology": "sociology",
   "app-section-science-computing": "computing",
   "app-section-media-datasets": "datasets",
   "app-section-media-datasets-general": "general",
