--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -182,6 +182,7 @@
   "app-guide-bookmark-books": "books",
   "app-guide-bookmark-history": "history",
   "app-menu-nearby-search": "nearby search",
+  "app-section-science-sociology": "sociology",
   "app-section-library-philosophy": "哲学",
   "app-section-library-genealogy": "家谱",
   "app-section-library-legal": "合法的",
