--- a/app/explore2/assets/i18n/ui/conzept-fi.json
+++ b/app/explore2/assets/i18n/ui/conzept-fi.json
@@ -174,6 +174,7 @@
   "app-guide-bookmark-books": "books",
   "app-guide-bookmark-history": "history",
   "app-menu-nearby-search": "nearby search",
+  "app-section-science-sociology": "sociology",
   "app-section-library-philosophy": "filosofia",
   "app-section-library-genealogy": "sukututkimusta",
   "app-section-library-legal": "laillinen",
