--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -182,6 +182,7 @@
   "app-guide-bookmark-books": "books",
   "app-guide-bookmark-history": "history",
   "app-menu-nearby-search": "nearby search",
+  "app-section-science-sociology": "sociology",
   "app-section-library-philosophy": "철학",
   "app-section-library-genealogy": "가계",
   "app-section-library-legal": "합법적인",
