--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -182,6 +182,7 @@
   "app-guide-bookmark-books": "books",
   "app-guide-bookmark-history": "history",
   "app-menu-nearby-search": "nearby search",
+  "app-section-science-sociology": "sociology",
   "app-section-library-philosophy": "triết lý",
   "app-section-library-genealogy": "phả hệ",
   "app-section-library-legal": "hợp pháp",
