ontology topics for bookmarks

--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -183,6 +183,7 @@
   "app-guide-bookmark-history": "Geschichte",
   "app-menu-nearby-search": "Suche in der Nähe",
   "app-section-science-sociology": "sociology",
+  "app-guide-bookmark-ontology": "ontology topics",
   "app-section-library-philosophy": "Philosophie",
   "app-section-library-genealogy": "Genealogie",
   "app-section-library-legal": "legal",
