--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -226,6 +226,7 @@
   "app-guide-bookmark-topic-differences": "differences",
   "app-guide-bookmark-commonalities": "commonalities",
   "app-guide-bookmark-similarities": "similarities",
+  "app-guide-bookmark-ontology": "ontology topics",
   "app-guide-bookmark-implications": "implications",
   "app-guide-bookmark-history": "history",
   "app-guide-bookmark-books": "books",
