--- a/app/explore2/assets/i18n/ui/conzept-id.json
+++ b/app/explore2/assets/i18n/ui/conzept-id.json
@@ -175,6 +175,7 @@
   "app-guide-bookmark-history": "history",
   "app-menu-nearby-search": "nearby search",
   "app-section-science-sociology": "sociology",
+  "app-guide-bookmark-ontology": "ontology topics",
   "app-section-library-philosophy": "filsafat",
   "app-section-library-genealogy": "silsilah",
   "app-section-library-legal": "hukum",
