--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -183,6 +183,7 @@
   "app-guide-bookmark-history": "history",
   "app-menu-nearby-search": "nearby search",
   "app-section-science-sociology": "sociology",
+  "app-guide-bookmark-ontology": "ontology topics",
   "app-section-library-philosophy": "哲学",
   "app-section-library-genealogy": "系譜",
   "app-section-library-legal": "法律上の",
