--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -183,6 +183,7 @@
   "app-guide-bookmark-history": "history",
   "app-menu-nearby-search": "nearby search",
   "app-section-science-sociology": "sociologie",
+  "app-guide-bookmark-ontology": "ontology topics",
   "app-section-library-philosophy": "filosofie",
   "app-section-library-genealogy": "genealogie",
   "app-section-library-legal": "legaal",
