--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -183,6 +183,7 @@
   "app-guide-bookmark-history": "history",
   "app-menu-nearby-search": "nearby search",
   "app-section-science-sociology": "sociology",
+  "app-guide-bookmark-ontology": "ontology topics",
   "app-section-library-philosophy": "філософія",
   "app-section-library-genealogy": "генеалогія",
   "app-section-library-legal": "правовий",
