--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -183,6 +183,7 @@
   "app-guide-bookmark-history": "history",
   "app-menu-nearby-search": "nearby search",
   "app-section-science-sociology": "sociology",
+  "app-guide-bookmark-ontology": "ontology topics",
   "app-section-library-philosophy": "triết lý",
   "app-section-library-genealogy": "phả hệ",
   "app-section-library-legal": "hợp pháp",
