--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -18,6 +18,7 @@
   "app-menu-search-in": "بحث في",
   "app-menu-search-in-option-reference": "المراجع",
   "app-menu-search-in-option-culture": "ثقافة",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "علوم",
   "app-menu-search-in-option-business": "عمل",
   "app-menu-filter-by": "مصنف بواسطة",
