--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -26,6 +26,7 @@
   "app-menu-api-keys": "API কী",
   "app-menu-sort-by-option-relevance-desc": "প্রাসঙ্গিকতা ↓",
   "app-menu-search-in-option-culture": "সংস্কৃতি",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "বিজ্ঞান",
   "app-menu-search-in-option-business": "ব্যবসা",
   "app-menu-sort-by-option-relevance-asc": "প্রাসঙ্গিকতা ↑",
