--- a/app/explore2/assets/i18n/ui/conzept-da.json
+++ b/app/explore2/assets/i18n/ui/conzept-da.json
@@ -18,6 +18,7 @@
   "app-menu-search-in": "søg ind",
   "app-menu-search-in-option-reference": "opslagsværker",
   "app-menu-search-in-option-culture": "kultur",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "videnskab",
   "app-menu-search-in-option-business": "forretning",
   "app-menu-filter-by": "Sorter efter",
