--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -18,6 +18,7 @@
   "app-menu-search-in": "suchen in",
   "app-menu-search-in-option-reference": "Nachschlagewerke",
   "app-menu-search-in-option-culture": "Kultur",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "Wissenschaft",
   "app-menu-search-in-option-business": "Geschäft",
   "app-menu-filter-by": "filtern nach",
