--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -18,6 +18,7 @@
   "app-menu-search-in": "جستجو در",
   "app-menu-search-in-option-reference": "آثار مرجع",
   "app-menu-search-in-option-culture": "فرهنگ",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "علوم پایه",
   "app-menu-search-in-option-business": "کسب و کار",
   "app-menu-filter-by": "محدود شده توسط",
