--- a/app/explore2/assets/i18n/ui/conzept-hi.json
+++ b/app/explore2/assets/i18n/ui/conzept-hi.json
@@ -18,6 +18,7 @@
   "app-menu-search-in": "की खोज में",
   "app-menu-search-in-option-reference": "संदर्भ कार्य",
   "app-menu-search-in-option-culture": "संस्कृति",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "विज्ञान",
   "app-menu-search-in-option-business": "व्यापार",
   "app-menu-filter-by": "फिल्टर के द्वारा",
