--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -18,6 +18,7 @@
   "app-menu-search-in": "검색하다",
   "app-menu-search-in-option-reference": "참고 작품",
   "app-menu-search-in-option-culture": "문화",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "과학",
   "app-menu-search-in-option-business": "사업",
   "app-menu-filter-by": "필터링 기준",
