--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -18,6 +18,7 @@
   "app-menu-search-in": "zoek in",
   "app-menu-search-in-option-reference": "naslagwerken",
   "app-menu-search-in-option-culture": "cultuur",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "wetenschap",
   "app-menu-search-in-option-business": "bedrijf",
   "app-menu-filter-by": "filteren op",
