--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -18,6 +18,7 @@
   "app-menu-search-in": "procure em",
   "app-menu-search-in-option-reference": "obras de referência",
   "app-menu-search-in-option-culture": "cultura",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "Ciência",
   "app-menu-search-in-option-business": "negócios",
   "app-menu-filter-by": "filtrar por",
