--- a/app/explore2/assets/i18n/ui/conzept-ta.json
+++ b/app/explore2/assets/i18n/ui/conzept-ta.json
@@ -18,6 +18,7 @@
   "app-menu-search-in": "தேடுங்கள்",
   "app-menu-search-in-option-reference": "குறிப்பு படைப்புகள்",
   "app-menu-search-in-option-culture": "கலாச்சாரம்",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "அறிவியல்",
   "app-menu-search-in-option-business": "வணிக",
   "app-menu-filter-by": "மூலம் வடிகட்டி",
