--- a/app/explore2/assets/i18n/ui/conzept-te.json
+++ b/app/explore2/assets/i18n/ui/conzept-te.json
@@ -18,6 +18,7 @@
   "app-menu-search-in": "లో శోధించండి",
   "app-menu-search-in-option-reference": "సూచన రచనలు",
   "app-menu-search-in-option-culture": "సంస్కృతి",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "సైన్స్",
   "app-menu-search-in-option-business": "వ్యాపారం",
   "app-menu-filter-by": "ద్వారా వడపోత",
