--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -18,6 +18,7 @@
   "app-menu-search-in": "tìm kiếm ở",
   "app-menu-search-in-option-reference": "tác phẩm tham khảo",
   "app-menu-search-in-option-culture": "văn hoá",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "khoa học",
   "app-menu-search-in-option-business": "việc kinh doanh",
   "app-menu-filter-by": "lọc bởi",
