--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -18,6 +18,7 @@
   "app-menu-search-in": "搜索",
   "app-menu-search-in-option-reference": "参考作品",
   "app-menu-search-in-option-culture": "文化",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "科学",
   "app-menu-search-in-option-business": "商业",
   "app-menu-filter-by": "过滤",
