--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -23,11 +23,12 @@
   "app-menu-search-in-option-reference": "reference works",
   "app-menu-search-in-option-culture": "culture",
   "app-menu-search-in-option-science": "science",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-business": "business",
+  "app-menu-search-in-option-legal": "legal",
   "app-menu-search-in-option-news": "news",
   "app-menu-search-in-option-media": "media",
   "app-menu-search-in-option-web": "web",
-  "app-menu-search-in-option-legal": "legal",
   "app-menu-near": "near",
   "app-menu-filter-by": "filter by",
   "app-menu-filter-by-option-text": "text",
