--- a/app/explore2/assets/i18n/ui/conzept-id.json
+++ b/app/explore2/assets/i18n/ui/conzept-id.json
@@ -26,6 +26,7 @@
   "app-menu-api-keys": "API keys",
   "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-search-in-option-culture": "culture",
+  "app-menu-search-in-option-taxonomy": "species taxonomy",
   "app-menu-search-in-option-science": "science",
   "app-menu-search-in-option-business": "business",
   "app-menu-sort-by-option-relevance-asc": "relevance ↑",
