--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "pangitaa sa",
   "app-menu-search-in-option-reference": "reperensiya nga mga buhat",
   "app-menu-search-in-option-culture": "kultura",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "siyensya",
   "app-menu-search-in-option-business": "negosyo",
   "app-menu-filter-by": "filter pinaagi sa",
