--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "Hledejte v",
   "app-menu-search-in-option-reference": "referenční práce",
   "app-menu-search-in-option-culture": "kultura",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "Věda",
   "app-menu-search-in-option-business": "podnikání",
   "app-menu-filter-by": "filtrovat podle",
