--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "bincika a ciki",
   "app-menu-search-in-option-reference": "ayyukan tunani",
   "app-menu-search-in-option-culture": "al'ada",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "kimiyya",
   "app-menu-search-in-option-business": "kasuwanci",
   "app-menu-filter-by": "tace by",
