--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "tražiti u",
   "app-menu-search-in-option-reference": "referentna djela",
   "app-menu-search-in-option-culture": "Kultura",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "znanost",
   "app-menu-search-in-option-business": "poslovanje",
   "app-menu-filter-by": "filtrirati po",
