--- a/app/explore2/assets/i18n/ui/conzept-mr.json
+++ b/app/explore2/assets/i18n/ui/conzept-mr.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "मध्ये शोधा",
   "app-menu-search-in-option-reference": "संदर्भ कार्य",
   "app-menu-search-in-option-culture": "संस्कृती",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "विज्ञान",
   "app-menu-search-in-option-business": "व्यवसाय",
   "app-menu-filter-by": "द्वारे फिल्टर करा",
