--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "искать в",
   "app-menu-search-in-option-reference": "справочные работы",
   "app-menu-search-in-option-culture": "культура",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "наука",
   "app-menu-search-in-option-business": "бизнес",
   "app-menu-filter-by": "Сортировать по",
