--- a/app/explore2/assets/i18n/ui/conzept-sv.json
+++ b/app/explore2/assets/i18n/ui/conzept-sv.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "Sök i",
   "app-menu-search-in-option-reference": "uppslagsverk",
   "app-menu-search-in-option-culture": "kultur",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "vetenskap",
   "app-menu-search-in-option-business": "företag",
   "app-menu-filter-by": "filtrera efter",
