--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "шукати в",
   "app-menu-search-in-option-reference": "довідкові праці",
   "app-menu-search-in-option-culture": "культури",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "наука",
   "app-menu-search-in-option-business": "бізнес",
   "app-menu-filter-by": "фільтрувати за",
