--- a/app/explore2/assets/i18n/ui/conzept-ca.json
+++ b/app/explore2/assets/i18n/ui/conzept-ca.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "buscar-hi",
   "app-menu-search-in-option-reference": "obres de referència",
   "app-menu-search-in-option-culture": "cultura",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "ciència",
   "app-menu-search-in-option-business": "negocis",
   "app-menu-filter-by": "filtrar per",
