--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -23,7 +23,7 @@
   "app-menu-search-in-option-reference": "reference works",
   "app-menu-search-in-option-culture": "culture",
   "app-menu-search-in-option-science": "science",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-business": "business",
   "app-menu-search-in-option-legal": "legal",
   "app-menu-search-in-option-news": "news",
