--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "busca en",
   "app-menu-search-in-option-reference": "la referencia funciona",
   "app-menu-search-in-option-culture": "cultura",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "ciencia",
   "app-menu-search-in-option-business": "negocio",
   "app-menu-filter-by": "filtrado por",
