--- a/app/explore2/assets/i18n/ui/conzept-it.json
+++ b/app/explore2/assets/i18n/ui/conzept-it.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "cerca nel",
   "app-menu-search-in-option-reference": "opere di riferimento",
   "app-menu-search-in-option-culture": "cultura",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "scienza",
   "app-menu-search-in-option-business": "Attività commerciale",
   "app-menu-filter-by": "filtra per",
