--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "Претрага у",
   "app-menu-search-in-option-reference": "референтни радови",
   "app-menu-search-in-option-culture": "културе",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "Наука",
   "app-menu-search-in-option-business": "посао",
   "app-menu-filter-by": "филтер од",
