--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -18,7 +18,7 @@
   "app-menu-search-in": "تلاش کریں",
   "app-menu-search-in-option-reference": "حوالہ کام",
   "app-menu-search-in-option-culture": "ثقافت",
-  "app-menu-search-in-option-taxonomy": "species taxonomy",
+  "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-science": "سائنس",
   "app-menu-search-in-option-business": "کاروبار",
   "app-menu-filter-by": "کی طرف سے فلٹر",
